# university-scheduler

./: .gitignore  03-bf.txt  04-bf.txt  10-bf.txt  CMakeLists.txt  IDEAS  Performance.ipynb  README.md  bf.csv  bf.ipynb  build.sh  checker.go  cover.sh  generate_submission.sh  problem_generator.go  profile.sh  run.sh  sa.csv  sa.ipynb  test.sh  threshold.ipynb
input/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
reports/: 307abe2.txt  543bcf3.txt  60s.txt  8cc7586-treap.txt  current.txt  dd2ee61.txt  e98b54c-before-treap.txt  fcb56b8.txt  fdba471.txt
scheduler/: BUILD  main.cpp  problem.cpp  problem.h  solution.cpp  solution.h  solver.cpp  solver.h  time_limited_solver.cpp  time_limited_solver.h
src/: checker.go  edge_set.go  fast_reader.go  main.cpp  main.go  problem.go  random_set.go  random_set_test.go  sa.py  solution.go  solution_test.go  treap.go  treap2.go  treap3.go  utils.go
